--- a/templates/template-product.html
+++ b/templates/template-product.html
@@ -290,7 +290,7 @@
           <p><span class="emoji-left">🌍</span> From :{%FROM%}</p>
           <p><span class="emoji-left">❤️</span> {%NUTRIENTSCTNAME%}</p>
           <p><span class="emoji-left">📦</span> {%QUANTITY%}</p>
-          <p><span class="emoji-left">🏷</span> {%price%}€</p>
+          <p><span class="emoji-left">🏷</span> {%PRICE%}€</p>
         </div>
   
         <a href="#" class="product__link">
@@ -299,7 +299,7 @@
         </a>
   
         <p class="product__description">
-          {%description%}
+          {%DESCRP%}
         </p>
       </figure>
       
